<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/include_head_pic_right" />

            <TextView
                android:id="@+id/tv_illustration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34pt"
                android:layout_marginRight="34pt"
                android:text="@string/createwallet_tips"
                android:textColor="@color/text_gray02"
                android:textSize="22pt" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34pt"
                android:layout_marginTop="72pt"
                android:layout_marginRight="34pt"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wallet Name "
                    android:textColor="#43535B"
                    android:textSize="18pt"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_name"
                    android:text="*"
                    android:textColor="@color/text_error"
                    android:textSize="18pt" />

                <TextView
                    android:id="@+id/tv_name_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:textColor="@color/text_error"
                    android:textSize="16pt"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_name"
                android:layout_width="match_parent"
                android:layout_height="82pt"
                android:layout_marginLeft="34pt"
                android:layout_marginTop="20pt"
                android:layout_marginRight="34pt"
                android:background="@drawable/bg_edit_gray"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_wname"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_edit_gray"
                    android:digits="@string/delete_chinese1"
                    android:hint="Ex:wallet01"
                    android:inputType="text"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:paddingLeft="20pt"
                    android:paddingRight="20pt"
                    android:singleLine="true"
                    android:textColorHint="#D2D2D2"
                    android:textSize="16pt" />

                <LinearLayout
                    android:id="@+id/ll_clear_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="26pt"
                        android:layout_height="26pt"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16pt"
                        android:layout_marginRight="16pt"
                        android:background="@drawable/icon_clear" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34pt"
                android:layout_marginTop="26pt"
                android:layout_marginRight="34pt"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password "
                    android:textColor="#43535B"
                    android:textSize="18pt"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="*"
                    android:textColor="@color/text_error"
                    android:textSize="18pt" />

                <RelativeLayout
                    android:id="@+id/rl_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="34pt"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/iv_red"
                        android:layout_width="30pt"
                        android:layout_height="wrap_content"
                        android:src="@drawable/level_red"></ImageView>

                    <ImageView
                        android:id="@+id/iv_yellow"
                        android:layout_width="30pt"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="28pt"
                        android:src="@drawable/bg_level_yellow"></ImageView>

                    <ImageView
                        android:id="@+id/iv_blue"
                        android:layout_width="30pt"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/iv_yellow"
                        android:layout_marginLeft="28pt"
                        android:src="@drawable/bg_level_blue"></ImageView>
                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_pass_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:text="@string/password_error"
                    android:textColor="@color/text_error"
                    android:textSize="16pt"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_edPass"
                android:layout_width="match_parent"
                android:layout_height="82pt"
                android:layout_marginLeft="34pt"
                android:layout_marginTop="20pt"
                android:layout_marginRight="34pt"
                android:background="@drawable/bg_edit_gray"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_pass"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/trans"
                    android:hint="@string/pass_hint"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:paddingLeft="20pt"
                    android:paddingRight="20pt"
                    android:singleLine="true"
                    android:textColorHint="#D2D2D2"
                    android:textSize="16pt" />

                <LinearLayout
                    android:id="@+id/ll_clear1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="26pt"
                        android:layout_height="26pt"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16pt"
                        android:layout_marginRight="16pt"
                        android:background="@drawable/icon_clear" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34pt"
                android:layout_marginTop="26pt"
                android:layout_marginRight="34pt"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_re_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Repeat The Password "
                    android:textColor="#43535B"
                    android:textSize="18pt"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_re_pass_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_re_pass"
                    android:text="*"
                    android:textColor="@color/text_error"
                    android:textSize="18pt" />

                <TextView
                    android:id="@+id/tv_re_pass_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/re_password_error"
                    android:textColor="@color/text_error"
                    android:textSize="16pt"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_rePass"
                android:layout_width="match_parent"
                android:layout_height="82pt"
                android:layout_marginLeft="34pt"
                android:layout_marginTop="20pt"
                android:layout_marginRight="34pt"
                android:background="@drawable/bg_edit_gray"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_repass"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/trans"
                    android:hint="@string/ex_re_pass"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="20pt"
                    android:paddingRight="20pt"
                    android:singleLine="true"
                    android:textColorHint="#D2D2D2"
                    android:textSize="16pt" />

                <LinearLayout
                    android:id="@+id/ll_clear2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="26pt"
                        android:layout_height="26pt"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16pt"
                        android:layout_marginRight="16pt"
                        android:background="@drawable/icon_clear" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34pt"
                android:layout_marginTop="26pt"
                android:layout_marginRight="34pt"
                android:text="Password Prompt"
                android:textColor="#43535B"
                android:textSize="18pt"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_pass_reminder"
                android:layout_width="match_parent"
                android:layout_height="82pt"
                android:layout_marginLeft="34pt"
                android:layout_marginTop="20pt"
                android:layout_marginRight="34pt"
                android:background="@drawable/bg_edit_gray"
                android:hint="@string/ex_promote"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingLeft="20pt"
                android:singleLine="true"
                android:textColorHint="#D2D2D2"
                android:textSize="16pt" />

            <TextView
                android:id="@+id/tv_mumber_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="94px"
                android:text="@string/num_limit"
                android:textColor="@color/text_error"
                android:textSize="16pt"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/ll_agreemt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34pt"
                android:layout_marginTop="94px"
                android:layout_marginRight="34pt"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/cb_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cb_agreemnt"
                    android:button="@null"
                    android:checked="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_20px"
                    android:text="I have read and agreed to the"
                    android:textColor="@color/text_blue"
                    android:textSize="@dimen/dimen_24px"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_agreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Service and Privacy Policy "
                    android:textColor="@color/selected_blue"
                    android:textSize="@dimen/dimen_24px"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/btn_create_new"
                android:layout_width="match_parent"
                android:layout_height="86pt"
                android:layout_marginLeft="34pt"
                android:layout_marginTop="116pt"
                android:layout_marginRight="34pt"
                android:layout_marginBottom="94pt"
                android:background="@drawable/bg_btn_cannot"
                android:enabled="false"
                android:gravity="center"
                android:text="Create Wallet"
                android:textColor="@color/white"
                android:textSize="22pt"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>